--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 *~
 *.sw[mnpcod]
 .env
+.env.local
+.env.*.local
 .tmp
 *.tmp
 *.tmp.*
@@ -17,6 +19,9 @@ $RECYCLE.BIN/
 *.log
 log.txt
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 /.idea
 /.ionic
@@ -25,9 +30,74 @@ npm-debug.log*
 /.versions
 /.vscode/*
 !/.vscode/extensions.json
+!/.vscode/settings.json
+!/.vscode/tasks.json
+!/.vscode/launch.json
 /coverage
 /dist
 /node_modules
 /platforms
 /plugins
 /www
+
+# Build files
+/build
+
+# IDE - VSCode
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# IDE - WebStorm/IntelliJ
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# System Files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Testing
+/coverage
+/.nyc_output
+
+# Capacitor
+/ios/App/public/
+/android/app/src/main/assets/public
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
