Replace Elevenlab with open source tts

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # OpenAI API Key
 VITE_OPENAI_API_KEY=your-api-key-here
 
-# ElevenLabs API Key
-VITE_ELEVENLABS_API_KEY=your-api-key-here
+# Replicate API Key
+VITE_REPLICATE_API_KEY=your-api-key-here
 
 # Other configuration variables
 VITE_APP_TITLE=Dreamweaver 
